dbent-derive/tests/ui/entity_label_struct_unit.rs
use dbent::prelude::*;

#[derive(Label)]
struct Test();

fn main() {}
